# EmbedScore

./: .gitignore  pyproject.toml
data/: Samusik_exprs.npy  Samusik_labels.npy  diffmap_emb.csv  diffmap_embedding.csv  hd_data.csv  isomap_emb.csv  isomap_embedding.csv  pca_embedding.csv  phate_embedding.csv  tsne_emb.csv  tsne_embedding.csv  umap_emb.csv  umap_embedding.csv  vivae_emb.csv
scripts/: compute_embeddings.py  emb_to_anndata.py
src/embedscore/: __init__.py  compute_neighborhoods.py  quality_metrics.py  visualization.py
tests/: method_test.ipynb
utils/: __init__.py  embeddings.py
