[project]
name = "embedscore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laura Hajzoková", email = "laura.hajzokova@ugent.be" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "typing",
    "anndata",
    "scipy",
    "seaborn",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
