[project]
name = "embedscore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laura Hajzoková", email = "laura.hajzokova@ugent.be" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "typing",
    "anndata",
    "scipy",
    "seaborn",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.12",
    "phate>=2.0.0",
    "opentsne>=1.0.4",
    "pydiffmap>=0.2.0.1",
    "vivae",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
vivae = { git = "https://github.com/saeyslab/ViVAE.git" }
